syntax = "proto3";

option csharp_namespace = "rpc.sdk";

package file;

service FileService {
    rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
    rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
}

message UploadFileRequest {
    string bytes = 1;
    string file_name = 2;
    string file_type = 3;
}

message UploadFileResponse {
    string message = 1;
}

message DownloadFileRequest {
    string file_name = 1;
}

message DownloadFileResponse {
    string bytes = 1;
    string file_name = 2;
    string file_type = 3;
}
